--- a/lgtm.yml
+++ b/lgtm.yml
@@ -1,5 +1,4 @@
-java:
-  # The `index` step extracts information from the files in the codebase.
-  index:
-    # Specify the Java version required to build the project.
-    java_version: 1.8
+extraction:
+  java:
+    index:
+      java_version: 1.8
